refactor: add container details
